# tokens

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  run_embed.py  run_tokenwise_alignment.py
examples/: uniprot_qwen14b_esm3.sh  wit_qwen14b_dinov2.sh
scripts/: embed_uniprot_esm3_sequence.py  embed_uniprot_esm3_structure.py  prepare_uniprot.py
src/tokens/: __init__.py  data.py  embed.py  io.py  metrics.py  models.py  tokenwise.py
